Addition of Hero Text
Hero text and image placeholder

--- a/index.html
+++ b/index.html
@@ -8,3 +8,11 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
+
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>I am Kiana Jones</h1>
+        <p>And I'm a Photographer</p>
+        <button>Hire me</button>
+      </div>
+    </div>
