--- a/index.html
+++ b/index.html
@@ -9,6 +9,47 @@
   </head>
   <body>
 
+    <section class="navbar">
+          <div class="container">
+            <div class="row">
+              <!--
+                NOTE
+                Notice that the href="index.html", which is this file.
+
+                This means that when users click this link, they will be directed
+                to the same page they're already on.
+
+                Sounds silly right? We have this defined here so that when we reuse
+                this navbar code on "otherpage.html", we will have a link back to
+                the home page again.
+
+                Why can't we just define it there and not here? Having consistent
+                navbars and footers on your website creates a better user-experience
+                for those browsing your site.
+              -->
+              <a href="index.html">WEBSITE NAME</a>
+              <div class="links">
+                <!--
+                  NOTE
+                  Previously, we defined links that lead to URLs on the internet.
+
+                  Here's an example of how we can define URLs to local pages, other
+                  pages of our website. The way to structure these links is similar
+                  to how we define paths for css href="./mycssfilename.css" or
+                  "mycssfilename.css", and images src="./imgs/myimagename.jpg"
+
+                  We simply make another filename.html, and link it here.
+
+                  (These links all lead to the same page out of convenience)
+                -->
+                <a href="otherpage.html">ABOUT</a>
+                <a href="otherpage.html">PRODUCT</a>
+                <a href="otherpage.html">JOIN</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
     <div class="hero-image">
       <div class="hero-text">
         <h1>I am Kiana Jones</h1>
