--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
       <div class="hero-text">
         <h1>I am Kiana Jones</h1>
         <p>And I'm a Photographer</p>
-        <button>Hire me</button>
+        <a class="button" href=".otherpage.html">Hire me</button>
       </div>
     </div>
