--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 
                   (These links all lead to the same page out of convenience)
                 -->
-                <a href="otherpage.html">ABOUT</a>
-                <a href="otherpage.html">PRODUCT</a>
-                <a href="otherpage.html">JOIN</a>
+                <a href="otherpage.html">PORTFOLIO</a>
               </div>
             </div>
           </div>
