--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </section>
 
-    <section class="intro padded pink">
+    <section class="intro padded red">
         <div class="container">
           <div class="row">
             <div class="column-large center">
