--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
 
       <section class="info padded">
       <div class="container">
-        <h2 class="heading">Lorem Ipsum Dolor</h2>
+        <h2 class="heading">But First, A Little About Me</h2>
         <div class="row">
           <div class="column">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              I am the 90's lovin', hip-hop playing, pop culture obsessed consumer insights analyst with a side hustle of graphic design.
             </p>
           </div>
           <div class="column">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              I'm a senior Marketing and Communication double major with a passion for... you probably thought I'd say fashion in reference to Sasha from Bratz. But, my passion is for everything that exudes spunk. I love understanding people, why they do what they do, and how to best appeal to them. So, it makes sense that consumer insights is for me.
             </p>
           </div>
           <div class="column">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              I've been in love with the media and entertainment industry for so long that I can't tell if my passion for it started first or if it was my performance as Scary Spice from the Spice Girls in the talent show. With graphic design, you take in all of the details about your target audience –– or maybe just your friend who wants a snapchat filter for their birthday –– and you bring their vision to life. You listen and then you deliver. That's what it's all about.
             </p>
           </div>
         </div>
