add more heading
more information in paragraphs

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="container">
           <div class="row">
             <div class="column-large center">
-              <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</h2>
+              <h2>There's no better way to understand me, than to understand my design thinking.</h2>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="column">
             <p>
-              I am the 90's lovin', hip-hop playing, pop culture obsessed consumer insights analyst with a side hustle of graphic design.
+              I am the 90's lovin', hip-hop playing, pop culture obsessed consumer insights analyst with a side hustle of graphic design. If you ask me Biggie or Tupac, I'll say Biggie in a heartbeat. If you ask Photoshop or Illustrator, expect to hear the one and only correct answer –– Illustrator.
             </p>
           </div>
           <div class="column">
