--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <section class="footer padded black">
       <div class="container">
-        <h2 class="heading">Lorem Ipsum Dolor</h2>
+        <h2 class="heading">Convinced with my words? Wait 'til you see my designs'</h2>
         <div class="row">
           <a href="#">
             <i class="fab fa-facebook-square"></i>
