--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 navbars and footers on your website creates a better user-experience
                 for those browsing your site.
               -->
-              <a href="index.html">WEBSITE NAME</a>
+              <a href="index.html">Consumer Insight that is in Sight</a>
               <div class="links">
                 <!--
                   NOTE
