--- a/otherpage.html
+++ b/otherpage.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Kiana Jones</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="./main.css">
-  </head>
-  <body>
-
-    <section class="navbar">
-          <div class="container">
-            <div class="row">
-              <!--
-                NOTE
-                Notice that the href="index.html", which is this file.
-
-                This means that when users click this link, they will be directed
-                to the same page they're already on.
-
-                Sounds silly right? We have this defined here so that when we reuse
-                this navbar code on "otherpage.html", we will have a link back to
-                the home page again.
-
-                Why can't we just define it there and not here? Having consistent
-                navbars and footers on your website creates a better user-experience
-                for those browsing your site.
-              -->
-              <a href="index.html">Consumer Insight that is in Sight</a>
-              <div class="links">
-                <!--
-                  NOTE
-                  Previously, we defined links that lead to URLs on the internet.
-
-                  Here's an example of how we can define URLs to local pages, other
-                  pages of our website. The way to structure these links is similar
-                  to how we define paths for css href="./mycssfilename.css" or
-                  "mycssfilename.css", and images src="./imgs/myimagename.jpg"
-
-                  We simply make another filename.html, and link it here.
-
-                  (These links all lead to the same page out of convenience)
-                -->
-                <a href="otherpage.html">PORTFOLIO</a>
-              </div>
-            </div>
-          </div>
-        </section>
-<!-- Portfolio Gallery Grid -->
-<div class="row">
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="lights.jpg" alt="Lights" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="nature.jpg" alt="Nature" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-</div>
-
-<div class="content">
-  <img src="bear.jpg" alt="Bear" style="width:100%">
-  <h3>Some Other Work</h3>
-  <p>Lorem ipsum..</p>
-</div>
-
-<!-- END MAIN -->
-</div>
+<img src="wienerapp.gif">
