updated where it links to
update link

--- a/otherpage.html
+++ b/otherpage.html
@@ -42,10 +42,10 @@
 
                   (These links all lead to the same page out of convenience)
                 -->
-                <a href="otherpage.html">PORTFOLIO</a>
+                <a href="index.html">ABOUT ME</a>
               </div>
             </div>
           </div>
         </section>
-        
+
 <img src="WienerAppSlow2.gif">
