css for when you go back
change css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kiana Jones</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="./other.css">
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body>
 
